edit os. infa + div zhrnutie, vzdel., work, skills

--- a/html/index.html
+++ b/html/index.html
@@ -14,19 +14,68 @@
         src="../files/patrik.jpg"
         alt="Fotografia Patrika Kopáča vytiahnutá zo životopisu. Už je trochu staršia, tak ju berte s rezervou :-)."
       />
-      <h2>Kontaktné informácie:</h2>
+      <p><strong>Email:</strong> kopacpatrik@email.cz</p>
+      <p><strong>Discord meno:</strong> Patrik K. (patrikkopac)</p>
+    </div>
+    <div class="summary">
+      <h2>Zhrnutie</h2>
+      <p>
+        Ahoj, volám sa Patrik, mám 30 rokov a som Slovák žijúci v srdci Slovácka
+        na Morave - v Uherskom Hradišti. Som čerstvo ženatý a som osvč, ale
+        momentálne robím málo, aby som sa rekvalifikoval na junior frontend
+        developera.
+      </p>
+    </div>
+    <div class="education">
       <table>
+        <caption>
+          Vzdelanie
+        </caption>
         <tr>
-          <td>Telefón</td>
-          <td>Mail</td>
-          <td>Discord meno</td>
+          <th>ENGETO kurz</th>
+          <th>FI MUNI Brno</th>
+          <th>SPŠ Dubnica n/Váhom</th>
         </tr>
         <tr>
-          <td>722 452 216</td>
-          <td>kopacpatrik@email.cz</td>
-          <td>Patrik K. (patrikkopac)</td>
+          <td>09/2023 - doteraz</td>
+          <td>09/2015 - 04/2016</td>
+          <td>09/2008 - 06/2012</td>
+        </tr>
+        <tr>
+          <td>Aktuálne prebehla prvá lekcia</td>
+          <td>Štúdium zanechané kvôli matematike</td>
+          <td>Úspešne ukončené s maturitou</td>
         </tr>
       </table>
+    </div>
+    <div class="work">
+      <h2>Pracovné skúsenosti</h2>
+      <ul>
+        <li>Marketingový manažer (VHK ROBE Vsetín)</li>
+        <li>
+          Online marketingový špecialista (IT STUDIO Brno / SCR Interactive
+          Bratislava / Effectix Praha)
+        </li>
+        <li>Sádrokartonista (OSVČ)</li>
+        <li>Skladník (Sportisimo, Notino, Greenbutik)</li>
+        <li>Predavač (Hayashi, Sportisimo)</li>
+        <li>Poštový doručovateľ (Slovenská pošta)</li>
+        <li>Bankér (UniCredit Bank)</li>
+        <li>
+          Profesionálny hráč ľadového hokeja (HKM Dubnica / Orli Znojmo / PSG
+          Zlín / Piráti Chomutov)
+        </li>
+      </ul>
+    </div>
+    <div class="skills">
+      <h2>Zručnosti</h2>
+      <ul>
+        <li>HTML, CSS, GIT - mierne pokročilý</li>
+        <li>JavaScript - základy</li>
+        <li>Online marketing - pokročilý</li>
+        <li>Canva - mierne pokročilý</li>
+        <li>Vodičský preukaz sk. B</li>
+      </ul>
     </div>
   </body>
 </html>
