začiatok css, dorobím zajtra

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div class="personal-info">
+    <div class="intro">
       <h1>Patrik Kopáč</h1>
       <img
         src="../files/patrik.jpg"
