uf, zabudol som to logovať :-) nevadí

--- a/html/index.html
+++ b/html/index.html
@@ -14,22 +14,26 @@
         src="../files/patrik.jpg"
         alt="Fotografia Patrika Kopáča vytiahnutá zo životopisu. Už je trochu staršia, tak ju berte s rezervou :-)."
       />
-      <p><strong>Email:</strong> kopacpatrik@email.cz</p>
-      <p><strong>Discord meno:</strong> Patrik K. (patrikkopac)</p>
+      <section class="contacts">
+        <p>
+          <strong>E-mail:</strong> <a href="mailto:">kopacpatrik@email.cz</a>
+        </p>
+        <p><strong>Discord meno:</strong> Patrik K. (patrikkopac)</p>
+      </section>
     </div>
     <div class="summary">
       <h2>Zhrnutie</h2>
       <p>
         Ahoj, volám sa Patrik, mám 30 rokov a som Slovák žijúci v srdci Slovácka
-        na Morave - v Uherskom Hradišti. Som čerstvo ženatý a som osvč, ale
-        momentálne robím málo, aby som sa rekvalifikoval na junior frontend
-        developera.
+        na Morave - v Uherskom Hradišti. Som čerstvo ženatý a som OSVČ, ale
+        momentálne robím málo, aby som mal čas sa rekvalifikovať na junior
+        frontend developera.
       </p>
     </div>
     <div class="education">
       <table>
         <caption>
-          Vzdelanie
+          <strong>Vzdelanie</strong>
         </caption>
         <tr>
           <th>ENGETO kurz</th>
@@ -43,7 +47,7 @@
         </tr>
         <tr>
           <td>Aktuálne prebehla prvá lekcia</td>
-          <td>Štúdium zanechané kvôli matematike</td>
+          <td>Štúdium zanechané kvôli nezvládnutiu matematiky</td>
           <td>Úspešne ukončené s maturitou</td>
         </tr>
       </table>
@@ -51,20 +55,14 @@
     <div class="work">
       <h2>Pracovné skúsenosti</h2>
       <ul>
-        <li>Marketingový manažer (VHK ROBE Vsetín)</li>
-        <li>
-          Online marketingový špecialista (IT STUDIO Brno / SCR Interactive
-          Bratislava / Effectix Praha)
-        </li>
-        <li>Sádrokartonista (OSVČ)</li>
-        <li>Skladník (Sportisimo, Notino, Greenbutik)</li>
-        <li>Predavač (Hayashi, Sportisimo)</li>
-        <li>Poštový doručovateľ (Slovenská pošta)</li>
-        <li>Bankér (UniCredit Bank)</li>
-        <li>
-          Profesionálny hráč ľadového hokeja (HKM Dubnica / Orli Znojmo / PSG
-          Zlín / Piráti Chomutov)
-        </li>
+        <li>Marketingový manažer</li>
+        <li>Online marketingový špecialista</li>
+        <li>Sádrokartonista</li>
+        <li>Bankér</li>
+        <li>Skladník</li>
+        <li>Predavač</li>
+        <li>Poštový doručovateľ</li>
+        <li>Profesionálny hráč ľadového hokeja</li>
       </ul>
     </div>
     <div class="skills">
@@ -75,7 +73,14 @@
         <li>Online marketing - pokročilý</li>
         <li>Canva - mierne pokročilý</li>
         <li>Vodičský preukaz sk. B</li>
+        <li>Dokážem zjesť kľudne 10+ tisíc kalórií za deň</li>
       </ul>
+    </div>
+    <div class="more-info">
+      <p>
+        Viac podrobností na mojom
+        <a href="https://www.linkedin.com/in/kopacpatrik/">Linkedin</a> profile.
+      </p>
     </div>
   </body>
 </html>
