pridanie komentov a main, zmena div na section

--- a/html/index.html
+++ b/html/index.html
@@ -8,79 +8,81 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div class="intro">
-      <h1>Patrik Kopáč</h1>
-      <img
-        src="../files/patrik.jpg"
-        alt="Fotografia Patrika Kopáča vytiahnutá zo životopisu. Už je trochu staršia, tak ju berte s rezervou :-)."
-      />
-      <section class="contacts">
+    <main>
+        <section class="intro">
+        <h1>Patrik Kopáč</h1>
+        <img
+            src="../files/patrik.jpg"
+            alt="Fotografia Patrika Kopáča vytiahnutá zo životopisu. Už je trochu staršia, tak ju berte s rezervou :-).">
+        </section>
+        <section class="contacts">
+            <p>
+            <strong>E-mail:</strong> <a href="mailto:">kopacpatrik@email.cz</a>
+            </p>
+            <p><strong>Discord meno:</strong> Patrik K. (patrikkopac)</p>
+        </section>
+        </section>
+        <section class="summary">
+        <h2>Zhrnutie</h2>
         <p>
-          <strong>E-mail:</strong> <a href="mailto:">kopacpatrik@email.cz</a>
+            Ahoj, volám sa Patrik, mám 30 rokov a som Slovák žijúci v srdci Slovácka
+            na Morave - v Uherskom Hradišti. Som čerstvo ženatý a som OSVČ, ale
+            momentálne robím málo, aby som mal čas sa rekvalifikovať na junior
+            frontend developera.
         </p>
-        <p><strong>Discord meno:</strong> Patrik K. (patrikkopac)</p>
-      </section>
-    </div>
-    <div class="summary">
-      <h2>Zhrnutie</h2>
-      <p>
-        Ahoj, volám sa Patrik, mám 30 rokov a som Slovák žijúci v srdci Slovácka
-        na Morave - v Uherskom Hradišti. Som čerstvo ženatý a som OSVČ, ale
-        momentálne robím málo, aby som mal čas sa rekvalifikovať na junior
-        frontend developera.
-      </p>
-    </div>
-    <div class="education">
-      <table>
-        <caption>
-          <strong>Vzdelanie</strong>
-        </caption>
-        <tr>
-          <th>ENGETO kurz</th>
-          <th>FI MUNI Brno</th>
-          <th>SPŠ Dubnica n/Váhom</th>
-        </tr>
-        <tr>
-          <td>09/2023 - doteraz</td>
-          <td>09/2015 - 04/2016</td>
-          <td>09/2008 - 06/2012</td>
-        </tr>
-        <tr>
-          <td>Aktuálne prebehla prvá lekcia</td>
-          <td>Štúdium zanechané kvôli nezvládnutiu matematiky</td>
-          <td>Úspešne ukončené s maturitou</td>
-        </tr>
-      </table>
-    </div>
-    <div class="work">
-      <h2>Pracovné skúsenosti</h2>
-      <ul>
-        <li>Marketingový manažer</li>
-        <li>Online marketingový špecialista</li>
-        <li>Sádrokartonista</li>
-        <li>Bankér</li>
-        <li>Skladník</li>
-        <li>Predavač</li>
-        <li>Poštový doručovateľ</li>
-        <li>Profesionálny hráč ľadového hokeja</li>
-      </ul>
-    </div>
-    <div class="skills">
-      <h2>Zručnosti</h2>
-      <ul>
-        <li>HTML, CSS, GIT - mierne pokročilý</li>
-        <li>JavaScript - základy</li>
-        <li>Online marketing - pokročilý</li>
-        <li>Canva - mierne pokročilý</li>
-        <li>Vodičský preukaz sk. B</li>
-        <li>Dokážem zjesť kľudne 10+ tisíc kalórií za deň</li>
-      </ul>
-    </div>
-    <div class="more-info">
+        </section>
+        <section class="education">
+        <table>
+            <caption>
+            <strong>Vzdelanie</strong>
+            </caption>
+            <tr>
+            <th>ENGETO kurz</th>
+            <th>FI MUNI Brno</th>
+            <th>SPŠ Dubnica n/Váhom</th>
+            </tr>
+            <tr>
+            <td>09/2023 - doteraz</td>
+            <td>09/2015 - 04/2016</td>
+            <td>09/2008 - 06/2012</td>
+            </tr>
+            <tr>
+            <td>Aktuálne prebehla prvá lekcia</td>
+            <td>Štúdium zanechané kvôli nezvládnutiu matematiky</td>
+            <td>Úspešne ukončené s maturitou</td>
+            </tr>
+        </table>
+        </section>
+        <section class="work">
+        <h2>Pracovné skúsenosti</h2>
+        <ul>
+            <li>Marketingový manažer</li>
+            <li>Online marketingový špecialista</li>
+            <li>Sádrokartonista</li>
+            <li>Bankér</li>
+            <li>Skladník</li>
+            <li>Predavač</li>
+            <li>Poštový doručovateľ</li>
+            <li>Profesionálny hráč ľadového hokeja</li>
+        </ul>
+        </section>
+        <section class="skills">
+        <h2>Zručnosti</h2>
+        <ul>
+            <li>HTML, CSS, GIT - mierne pokročilý</li>
+            <li>JavaScript - základy</li>
+            <li>Online marketing - pokročilý</li>
+            <li>Canva - mierne pokročilý</li>
+            <li>Vodičský preukaz sk. B</li>
+            <li>Dokážem zjesť kľudne 10+ tisíc kalórií za deň</li>
+        </ul>
+        </section>
+    </main>
+    <footer class="more-info">
       <p>
         Viac podrobností na mojom
         <a href="https://www.linkedin.com/in/kopacpatrik/">Linkedin</a> profile.
       </p>
-    </div>
+    </footer>
   </body>
 </html>
