small detail in html img alt

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
         <h1>Patrik Kopáč</h1>
         <img
             src="../files/patrik.jpg"
-            alt="Fotografia Patrika Kopáča vytiahnutá zo životopisu. Už je trochu staršia, tak ju berte s rezervou :-).">
+            alt="Fotografia Patrika Kopáča vytiahnutá zo životopisu. Už je trochu staršia, tak ju berte s rezervou :).">
         </section>
         <section class="contacts">
             <p>
